# aqa-inforce-svjatoslav-granatovich

./: README.md  pyproject.toml  test-cases.txt
src/ui/: booker.py
src/ui/pages/: booking_room_page.py  login_page.py  main_page.py
tests/api/: client.py  conftest.py  test_room.py
tests/ui/: conftest.py  test_booking.py
utils/: allure_helper.py
